--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@*": ["./*"],
       "@pages/*": ["./pages/*"],
       "@components/*": ["./components/*"],
-      "@utils/*": ["./utils/*"]
+      "@utils/*": ["./utils/*"],
+      "@images/*": ["./public/assets/img/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
