--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@types/react-dom": "18.0.11",
@@ -20,8 +22,8 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.37.0",
     "eslint-config-next": "^13.2.4",
