--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.37.0",
     "eslint-config-next": "^13.2.4",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.7",
