--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@pages/*": ["./pages/*"],
       "@components/*": ["./components/*"],
       "@utils/*": ["./utils/*"],
+      "@assets/*": ["./public/assets/*"],
       "@images/*": ["./public/assets/img/*"],
       "@url": ["./public/assets/url"]
     }
