--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
