--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -19,12 +21,13 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "mobx": "^6.9.1",
+    "mobx-react": "^9.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9",
-    "zustand": "^4.3.8"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
