--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "chart.js": "^4.4.2",
     "mobx": "^6.9.1",
     "mobx-react": "^9.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
