--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@*": ["./*"],
       "@pages/*": ["./pages/*"],
       "@components/*": ["./components/*"],
+      "@controller/*": ["./controller/*"],
       "@store/*": ["./store/*"],
       "@utils/*": ["./utils/*"],
       "@assets/*": ["./public/assets/*"],
