--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.5",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "chart.js": "^4.4.2",
+    "cheerio": "^1.0.0",
     "mobx": "^6.9.1",
     "mobx-react": "^9.0.0",
     "next": "13.2.4",
