--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.3.5",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "chart.js": "^4.4.2",
