--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-virtuoso": "^4.12.3",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
