--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "babel-plugin-inline-react-svg": "^2.0.2",
     "chart.js": "^4.4.2",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "mobx": "^6.9.1",
     "mobx-react": "^9.0.0",
     "next": "13.2.4",
+    "openai": "^4.87.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
