--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@suspensive/react": "^3.3.2",
     "@tanstack/react-query": "^5.83.0",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
