--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.3"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
